k8s/ingress-controller/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp1
  labels:
    app: nginx-webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webapp1
      type: web
  template:
    metadata:
      labels:
        app: nginx-webapp1
        type: web
    spec:
      containers:
        - name: webapp
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webdata
              mountPath: /usr/share/nginx/html
      volumes:
        - name: webdata
          emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp2
  labels:
    app: nginx-webapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webapp2
      type: web
  template:
    metadata:
      labels:
        app: nginx-webapp2
        type: web
    spec:
      containers:
        - name: webapp
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webdata
              mountPath: /usr/share/nginx/html
      volumes:
        - name: webdata
          emptyDir: {}
